Shenandoah: assert(n->outcnt() > 0) at shenandoahSupport.cpp:2858 with java/util/Collections/FindSubList.java

XMLWordPrintable

    • b17

        [2020-03-26 13:15:55,612] Agent[1]: stdout: # Internal Error (/home/roland/shenandoah-jdk11/src/hotspot/share/gc/shenandoah/c2/shenandoahSupport.cpp:2858), pid=935922, tid=935934
        [2020-03-26 13:15:55,612] Agent[1]: stdout: # assert(n->outcnt() > 0) failed: new phi must have uses now

              Assignee:
              Roland Westrelin
              Reporter:
              Roland Westrelin
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: